<resources>

    <!-- Titles and Text -->
    <string name="app_name">UI Templates</string>
    <string name="title_activity_user_registration">New User Details</string>

    <!-- messages -->
    <string name="accept_the_terms">Accept the Terms</string>
    <string name="cannot_be_blank">Cannot be blank</string>
    <string name="email_required">Email required for registration</string>
    <string name="enter_mobile_number">Enter 10 digit mobile number</string>
    <string name="save_details">Save Details</string>

    <!-- Label and fields -->
    <string name="personal_detail">Personal Detail</string>
    <string name="terms">Terms</string>
    <string name="accepted">Accepted</string>
    <string name="id_proof">ID Proof</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="pan">PAN</string>
    <string name="aadhar">Aadhar</string>
    <string name="verify_id">Verify ID</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TextInputEditText validations -->
    <string name="validation_alpha_space">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="validation_alpha_numeric">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="validation_number_only">1234567890</string>
    <integer name="validation_name_length">40</integer>
    <integer name="validation_mobile_length">10</integer>
    <integer name="validation_email_length">40</integer>
    <integer name="validation_pan_length">10</integer>
    <integer name="validation_aadhar_length">12</integer>

</resources>