<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="demo.raina.uitemplates.userRegisterWizard.UserRegistrationVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:clipToPadding="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".userRegisterWizard.PersonalDetailFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_name"
            style="@style/Theme.UITemplates.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            app:boxStrokeErrorColor="@android:color/holo_red_dark"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/validation_name_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_face">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/validation_alpha_space"
                android:maxLength="@integer/validation_name_length"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={vm._name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_mobile"
            style="@style/Theme.UITemplates.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/mobile"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/validation_mobile_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ip_layout_name"
            app:startIconDrawable="@drawable/ic_mobile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/validation_number_only"
                android:maxLength="@integer/validation_mobile_length"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={vm._mobile}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_email"
            style="@style/Theme.UITemplates.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/email"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/validation_email_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ip_layout_mobile"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/validation_email_length"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@={vm._email}" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>